--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="weddingApp">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <!--Libs-->
+    <script src="lib/angular/angular.min.js"></script>
+    <script src="lib/angular/angular-route.min.js"></script>
+
 
     <!--Javascript-->
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
 
     <!--Css-->
+
+
 </head>
 <body>
-
+    <div ng-view></div>
 </body>
 </html>
