pop up created, minor changes, libs added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <!--Libs-->
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
+    <script src="lib/angular/angular-animate.min.js"></script>
+    <script src="lib/angular/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.js"></script>
 
 
     <!--Javascript-->
@@ -13,7 +16,7 @@
     <script src="js/controllers.js"></script>
 
     <!--Css-->
-
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.css">
 
 </head>
 <body>
